# ZkPatternFuzz

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BUGS_REPORT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_AUDIT_FIXES.md  CODE_REVIEW.md  CONTRIBUTING.md  CVE_FIX_SUMMARY.md  Cargo.toml  DEAD_CODE_REMOVAL_REPORT.md  FINAL_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PRIORITY_MATRIX.md  IMPLEMENTATION_SYNTHESIS.md  Implementation.md  LICENSE  LOGIC_AUDIT.md  LOGIC_ERRORS_AUDIT.md  MANUAL_CODE_REVIEW.md  Newscans.md  PLAN_0DAY_PROFESSIONAL.md  QUICK_START_IMPLEMENTATION.md  READINESS_REVIEW.md  README.md  REFACTORING_PLAN.md  REMAINING_WORK.md  ROADMAP.md  SECURITY_REVIEW_0DAY_FITNESS.md  SECURITY_REVIEW_0DAY_FITNESS_UPDATED.md  SECURITY_REVIEW_FINAL.md  SECURITY_REVIEW_FINAL_UPDATED.md  TARGETS_DOWNLOADED.md  TODO_SUMMARY.md  VERIDISE_INTEGRATION.md  WARNINGS_FIXED.md  WORKFLOW_UPDATES.md  (+8 more)
.windsurf/: mcp_config.json
CVErefs/: AUTONOMOUS_TEST_SUITE.md  README.md  circuit_references.json
ZkFuzz/: latest.json
benches/: chain_benchmark.rs
benchmarks/: chain_throughput.rs  fuzzer_throughput.rs
circuits/: mock_merkle.circom  mock_nullifier.circom  (+1 more)
crates/zk-attacks/: Cargo.toml
crates/zk-attacks/src/: arithmetic.rs  batch_verification.rs  batch_verification_tests.rs  batch_verifier.rs  batch_verifier_tests.rs  boundary.rs  boundary_tests.rs  circom_static_lint.rs  circom_static_lint_tests.rs  collision.rs  collision_tests.rs  constraint_inference.rs  constraint_inference_tests.rs  defi_advanced.rs  defi_advanced_tests.rs  lib.rs  metamorphic.rs  metamorphic_tests.rs  privacy_advanced.rs  privacy_advanced_tests.rs  quantum_resistance.rs  quantum_resistance_tests.rs  recursive.rs  recursive_tests.rs  registry.rs  registry_tests.rs  sidechannel_advanced.rs  sidechannel_advanced_tests.rs  soundness.rs  trusted_setup.rs  trusted_setup_tests.rs  underconstrained.rs  underconstrained_tests.rs  verification.rs  verification_tests.rs  witness.rs  witness_tests.rs  zkevm.rs  zkevm_differential.rs  zkevm_differential_tests.rs  (+1 more)
crates/zk-attacks/tests/: constraint_inference.rs
crates/zk-backends/: Cargo.toml
crates/zk-backends/src/: fixture.rs  lib.rs  registry.rs  util.rs
crates/zk-backends/src/cairo/: mod.rs  mod_tests.rs
crates/zk-backends/src/circom/: mod.rs  mod_tests.rs
crates/zk-backends/src/fixture/: mod.rs
crates/zk-backends/src/halo2/: mod.rs  mod_tests.rs
crates/zk-backends/src/mock/: executor.rs  mod.rs
crates/zk-backends/src/noir/: mod.rs  mod_tests.rs
crates/zk-backends/tests/: test_halo2_toolchain_cascade.rs
crates/zk-circuit-gen/: Cargo.toml
crates/zk-circuit-gen/examples/: compile_and_extract_structure.rs  extract_semantic_intent.rs  generate_adversarial_corpus.rs  generate_bulk_corpus.rs  run_backend_compile_integration.rs  run_compiler_crash_detector.rs  run_differential_compiler_matrix.rs  run_differential_regression_probe.rs  run_differential_version_matrix.rs  verify_semantic_constraint_match.rs
crates/zk-circuit-gen/src/: lib.rs
crates/zk-circuit-gen/tests/: template_rendering.rs
crates/zk-constraints/: Cargo.toml
crates/zk-constraints/src/: alt_witness_solver.rs  alt_witness_solver_tests.rs  constraint_types.rs  constraint_types_tests.rs  lib.rs  limb_analysis.rs  limb_analysis_tests.rs  limb_boundary_fuzzer.rs  limb_boundary_fuzzer_tests.rs  lookup_coverage.rs  lookup_coverage_tests.rs  lookup_extractor.rs  lookup_extractor_tests.rs  lookup_fuzzer.rs  lookup_fuzzer_tests.rs  proof_forgery.rs  proof_forgery_tests.rs  r1cs_parser.rs  r1cs_parser_tests.rs  r1cs_to_smt.rs  r1cs_to_smt_tests.rs  underconstrained_exploit.rs  underconstrained_exploit_tests.rs
crates/zk-core/: Cargo.toml
crates/zk-core/src/: constants.rs  error.rs  executor.rs  field.rs  field_tests.rs  info.rs  invariants.rs  lib.rs  traits.rs  types.rs  types_tests.rs
crates/zk-core/tests/: field.rs  types.rs
crates/zk-fuzzer-core/: Cargo.toml
crates/zk-fuzzer-core/src/: constants.rs  constants_tests.rs  coverage.rs  coverage_tests.rs  engine.rs  engine_tests.rs  lib.rs  mutators.rs  mutators_tests.rs  oracle.rs  oracle_tests.rs  power_schedule.rs  power_schedule_tests.rs  stats.rs  structure_aware.rs  structure_aware_tests.rs
crates/zk-fuzzer-core/src/corpus/: deduplication.rs  deduplication_tests.rs  delta_debug.rs  delta_debug_tests.rs  minimizer.rs  minimizer_tests.rs  mod.rs  mod_tests.rs  storage.rs  storage_tests.rs
crates/zk-fuzzer-core/tests/: constants.rs  coverage.rs  engine.rs  mutators.rs  oracle.rs  power_schedule.rs  structure_aware.rs
crates/zk-postroadmap-core/: Cargo.toml
crates/zk-postroadmap-core/src/: contracts.rs  errors.rs  lib.rs  runner.rs
crates/zk-postroadmap-core/tests/: core_contracts.rs
crates/zk-symbolic/: Cargo.toml
crates/zk-symbolic/src/: concolic.rs  concolic_tests.rs  constraint_guided.rs  constraint_guided_tests.rs  constraint_symbolic.rs  enhanced.rs  enhanced_tests.rs  executor.rs  executor_tests.rs  lib.rs  symbolic_v2.rs  symbolic_v2_tests.rs  targeted.rs  targeted_tests.rs
crates/zk-track-boundary/: Cargo.toml
crates/zk-track-boundary/examples/: run_cross_component_fuzz_campaign.rs  run_public_input_manipulation_campaign.rs  run_serialization_fuzz_campaign.rs  run_solidity_verifier_fuzz_campaign.rs
crates/zk-track-boundary/src/: adapters.rs  cross_component_fuzzer.rs  lib.rs  public_input_fuzzer.rs  serialization_fuzzer.rs  solidity_verifier_fuzzer.rs
crates/zk-track-compiler/: Cargo.toml
crates/zk-track-compiler/src/: adapters.rs  lib.rs
crates/zk-track-crypto/: Cargo.toml
crates/zk-track-crypto/examples/: run_curve_operation_fuzz_campaign.rs  run_field_arithmetic_fuzz_campaign.rs  run_pairing_fuzz_campaign.rs
crates/zk-track-crypto/src/: curve_fuzzer.rs  field_fuzzer.rs  generators.rs  lib.rs  oracle.rs  pairing_fuzzer.rs  property_checker.rs
crates/zk-track-semantic/: Cargo.toml
crates/zk-track-semantic/examples/: semantic_exit_campaign.rs
crates/zk-track-semantic/src/: adapters.rs  lib.rs
crates/zk-track-semantic/tests/: semantic_track_runner.rs
(+1804 files in other folders)
