[package]
name = "zk-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Zero-Knowledge Proof Security Testing Framework"
license = "BUSL-1.1"

[workspace]
members = [
    ".",
    "crates/zk-core",
    "crates/zk-constraints",
    "crates/zk-backends",
    "crates/zk-symbolic",
    "crates/zk-fuzzer-core",
    "crates/zk-attacks",
    "crates/zk-attacks-plugin-example",
]

[dependencies]
# Config & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# ZK Backends
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"

# Fuzzing infrastructure
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.4"

# Async & Parallelism
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"

# CLI & Reporting
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"
indicatif = "0.17"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.10"
hex = "0.4"
num-bigint = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5.0"  # For finding home directory
tempfile = "3.10"
wait-timeout = "0.2"  # Clean timeout handling for child processes
zk-core = { path = "crates/zk-core" }
zk-constraints = { path = "crates/zk-constraints" }
zk-backends = { path = "crates/zk-backends" }
zk-symbolic = { path = "crates/zk-symbolic" }
zk-fuzzer-core = { path = "crates/zk-fuzzer-core" }
zk-attacks = { path = "crates/zk-attacks" }

# SMT Solver for symbolic execution
z3 = { version = "0.12", features = ["static-link-z3"] }
num_cpus = "1.16"
crossbeam = "0.8.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chain_benchmark"
harness = false

[[bench]]
name = "fuzzer_throughput"
harness = false
path = "benchmarks/fuzzer_throughput.rs"

[[bench]]
name = "chain_throughput"
harness = false
path = "benchmarks/chain_throughput.rs"

[features]
default = []
symbolic = []  # Enable full symbolic execution
acir-bytecode = ["zk-constraints/acir-bytecode"]
attack-plugins = ["zk-attacks/plugin-loader"]

[[bin]]
name = "zk-fuzzer"
path = "src/main.rs"
