[package]
name = "zk-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Zero-Knowledge Proof Security Testing Framework"
license = "MIT"
authors = ["Teycir Ben Soltane <teycir@pxdmail.net>"]
homepage = "https://teycirbensoltane.tn"
repository = "https://github.com/Teycir/ZkPatternFuzz"

[workspace]
members = [
    ".",
    "crates/zk-core",
    "crates/zk-constraints",
    "crates/zk-backends",
    "crates/zk-symbolic",
    "crates/zk-fuzzer-core",
    "crates/zk-attacks",
    "crates/zk-attacks-plugin-example",
    "crates/zk-postroadmap-core",
    "crates/zk-track-boundary",
    "crates/zk-track-compiler",
    "crates/zk-track-semantic",
    "crates/zk-track-crypto",
    "crates/zk-circuit-gen",
]

[dependencies]
# Config & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async & Parallelism
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"

# CLI & Reporting
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"
indicatif = "0.17"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.10"
walkdir = "2.5"
hex = "0.4"
num-bigint = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5.0"  # For finding home directory
tempfile = "3.10"
zk-core = { path = "crates/zk-core" }
zk-constraints = { path = "crates/zk-constraints" }
zk-backends = { path = "crates/zk-backends" }
zk-symbolic = { path = "crates/zk-symbolic" }
zk-fuzzer-core = { path = "crates/zk-fuzzer-core" }
zk-attacks = { path = "crates/zk-attacks" }
zk-postroadmap-core = { path = "crates/zk-postroadmap-core" }
zk-track-boundary = { path = "crates/zk-track-boundary" }
zk-track-compiler = { path = "crates/zk-track-compiler" }
zk-track-semantic = { path = "crates/zk-track-semantic" }
zk-track-crypto = { path = "crates/zk-track-crypto" }

num_cpus = "1.16"
crossbeam = "0.8.4"
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chain_benchmark"
harness = false

[[bench]]
name = "fuzzer_throughput"
harness = false
path = "benchmarks/fuzzer_throughput.rs"

[[bench]]
name = "chain_throughput"
harness = false
path = "benchmarks/chain_throughput.rs"

[features]
default = []
symbolic = []  # Enable full symbolic execution
acir-bytecode = ["zk-constraints/acir-bytecode"]
attack-plugins = ["zk-attacks/plugin-loader"]
z3-static = ["zk-constraints/z3-static", "zk-symbolic/z3-static"]

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false

[[bin]]
name = "zk-fuzzer"
path = "src/main.rs"
