[package]
name = "zk-attacks"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Attack implementations for ZK circuits"

[dependencies]
zk-core = { path = "../zk-core" }
zk-fuzzer-core = { path = "../zk-fuzzer-core" }
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
num_cpus = "1.16"
hex = "0.4"
tracing = "0.1"
libloading = { version = "0.8", optional = true }
regex = "1.11"

[dev-dependencies]
zk-backends = { path = "../zk-backends" }

[features]
default = []
plugin-loader = ["libloading"]
