[package]
name = "zk-circuit-gen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Programmatic circuit-generation DSL with backend syntax templates"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
