[package]
name = "zk-constraints"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Constraint parsing and analysis utilities for ZK circuits"

[dependencies]
zk-core = { path = "../zk-core" }
anyhow = "1.0"
num-bigint = "0.4"
serde_json = "1.0"
tracing = "0.1"
z3 = { version = "0.12", features = ["static-link-z3"] }

# Optional ACIR bytecode decoding
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", optional = true, default-features = false, features = ["zlib"] }
bincode = { version = "1.3", optional = true }
acir = { version = "0.46", optional = true }

[features]
default = []
acir-bytecode = ["base64", "flate2", "bincode", "acir"]
