[package]
name = "zk-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for ZkPatternFuzz"
license = "BUSL-1.1"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
