[package]
name = "zk-fuzzer-core"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Core fuzzing utilities and engine components for ZK circuits"

[dependencies]
zk-core = { path = "../zk-core" }
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"
async-trait = "0.1"
