[package]
name = "zk-track-boundary"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Deferred boundary track runner (public input/serialization/verifier boundary testing)"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zk-postroadmap-core = { path = "../zk-postroadmap-core" }
