[package]
name = "zk-track-boundary"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deferred boundary track runner (public input/serialization/verifier boundary testing)"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zk-postroadmap-core = { path = "../zk-postroadmap-core" }
zk-core = { path = "../zk-core" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
