[package]
name = "zk-track-compiler"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deferred compiler track runner (generation/differential/crash testing)"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zk-postroadmap-core = { path = "../zk-postroadmap-core" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
