[package]
name = "zk-track-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deferred crypto track runner (field/curve/pairing property fuzzing)"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zk-postroadmap-core = { path = "../zk-postroadmap-core" }
zk-core = { path = "../zk-core" }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
